--- a/weekly/index.html
+++ b/weekly/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Erick's Coursepage</title>
+<link rel="stylesheet" href="css/homepage.css">
 </head>
 
 <body>
@@ -54,6 +55,13 @@
 <dd><a href="w6/div3.html">Photoshop to Webpage 3</a></dd>
 </dl>
 	
+<dl>
+<dt>Week 7</dt>
+	<dd><a href="w7/menu.html">Chapter 12 Exercise</a></dd>
+	<dd><a href="w7/summermenu.html">Chapter 13 Exercise</a></dd>
+	<dd><a href="w7/w3schools/w3schools.html">CSS Tutorial Part 3</a></dd>
+</dl>
+	
 </div><!-- weekly ends-->
 <div id="project">
 <h4>Project</h4>
@@ -68,8 +76,8 @@
 <dd><a href="../project/process/sitemap.pdf">Site Maps</a></dd>
 <dd>Mood Boards <a href="../project/process/moodboard1.jpg">1</a> and <a href="../project/process/moodboard2.jpg">2</a> </dd>
 <dd><a href="../project/process/websitesketches.pdf">Sketches/wireframes (2-3 concepts)</a></dd>
-<dd>Initial Mockups #1 </dd>
-<dd>Initial mockups #2 </dd>
+<dd><a href="../../design_process/Mockups/mockups.html">Initial Mockups #1</a></dd>
+<dd><a href="../../design_process/Mockups/mockups2.html">Initial mockups #2</a></dd>
 <dd>Revised Mockups #1 </dd>
 <dd>Revised mockups #2 </dd>
 <dd>Refined mockups </dd>
