--- a/weekly/index.html
+++ b/weekly/index.html
@@ -76,8 +76,8 @@
 <dd><a href="../project/process/sitemap.pdf">Site Maps</a></dd>
 <dd>Mood Boards <a href="../project/process/moodboard1.jpg">1</a> and <a href="../project/process/moodboard2.jpg">2</a> </dd>
 <dd><a href="../project/process/websitesketches.pdf">Sketches/wireframes (2-3 concepts)</a></dd>
-<dd><a href="../../design_process/Mockups/mockups.html">Initial Mockups #1</a></dd>
-<dd><a href="../../design_process/Mockups/mockups2.html">Initial mockups #2</a></dd>
+<dd><a href="../project/process/Mockups/mockups.html">Initial Mockups #1</a></dd>
+<dd><a href="../project/process/Mockups/mockups2.html">Initial mockups #2</a></dd>
 <dd>Revised Mockups #1 </dd>
 <dd>Revised mockups #2 </dd>
 <dd>Refined mockups </dd>
