--- a/weekly/index.html
+++ b/weekly/index.html
@@ -61,6 +61,12 @@
 	<dd><a href="w7/summermenu.html">Chapter 13 Exercise</a></dd>
 	<dd><a href="w7/w3schools/w3schools.html">CSS Tutorial Part 3</a></dd>
 </dl>
+
+<dl>
+<dt>Week 8</dt>
+	<dd><a href="w8/bakery.html">Chapter 15 Exercise</a></dd>
+	<dd><a href="w8/webfonts.html">Webfonts Exercise</a></dd>
+</dl>	
 	
 </div><!-- weekly ends-->
 <div id="project">
@@ -78,8 +84,7 @@
 <dd><a href="../project/process/websitesketches.pdf">Sketches/wireframes (2-3 concepts)</a></dd>
 <dd><a href="../project/process/Mockups/mockups.html">Initial Mockups #1</a></dd>
 <dd><a href="../project/process/Mockups/mockups2.html">Initial mockups #2</a></dd>
-<dd>Revised Mockups #1 </dd>
-<dd>Revised mockups #2 </dd>
+<dd><a href="../project/process/Mockups/revised-mockups.html">Revised Mockups</a></dd>
 <dd>Refined mockups </dd>
 <dd>HTML structure 1 </dd>
 <dd>HTML structure 2 </dd>
