--- a/weekly/index.html
+++ b/weekly/index.html
@@ -66,6 +66,12 @@
 <dt>Week 8</dt>
 	<dd><a href="w8/bakery.html">Chapter 15 Exercise</a></dd>
 	<dd><a href="w8/webfonts.html">Webfonts Exercise</a></dd>
+</dl>
+
+<dl>
+<dt>Week 9</dt>
+	<dd><a href="w9/exercise_18-1.html">Chapter 18-1 Exercise</a></dd>
+	<dd><a href="w9/exercise_18-2.html">Chapter 18-2 Exercise</a></dd>
 </dl>	
 	
 </div><!-- weekly ends-->
@@ -85,7 +91,7 @@
 <dd><a href="../project/process/Mockups/mockups.html">Initial Mockups #1</a></dd>
 <dd><a href="../project/process/Mockups/mockups2.html">Initial mockups #2</a></dd>
 <dd><a href="../project/process/Mockups/revised-mockups.html">Revised Mockups</a></dd>
-<dd>Refined mockups </dd>
+<dd><a href="../project/process/Mockups/refined-mockups.html">Refined mockups</a></dd>
 <dd>HTML structure 1 </dd>
 <dd>HTML structure 2 </dd>
 <dd>Coding in progress</dd>
