--- a/weekly/index.html
+++ b/weekly/index.html
@@ -73,6 +73,13 @@
 	<dd><a href="w9/exercise_18-1.html">Chapter 18-1 Exercise</a></dd>
 	<dd><a href="w9/exercise_18-2.html">Chapter 18-2 Exercise</a></dd>
 </dl>	
+
+<dl>
+<dt>Week 10</dt>
+	<dd><a href="w10/mylightbox.html">Lightbox Gallery</a></dd>
+	<dd><a href="w10/parallax.html">Parallax Example</a></dd>
+</dl>	
+	
 	
 </div><!-- weekly ends-->
 <div id="project">
@@ -92,8 +99,11 @@
 <dd><a href="../project/process/Mockups/mockups2.html">Initial mockups #2</a></dd>
 <dd><a href="../project/process/Mockups/revised-mockups.html">Revised Mockups</a></dd>
 <dd><a href="../project/process/Mockups/refined-mockups.html">Refined mockups</a></dd>
-<dd>HTML structure 1 </dd>
-<dd>HTML structure 2 </dd>
+<dd><a href="../project/site/homepage.html">HTML structure 1</a></dd>
+<dd><a href="../project/site/portfoliopage.html">HTML structure 2</a></dd>
+<dd><a href="../project/site/resumepage.html">HTML structure 3</a></dd>
+<dd><a href="../project/site/tsc.html">HTML structure 4</a></dd>
+<dd><a href="../project/site/contactpage.html">HTML structure 5</a></dd>
 <dd>Coding in progress</dd>
 <dd>Final website</dd>
 </dl>
