--- a/weekly/index.html
+++ b/weekly/index.html
@@ -80,6 +80,12 @@
 	<dd><a href="w10/parallax.html">Parallax Example</a></dd>
 </dl>	
 	
+<dl>
+<dt>Week 11</dt>
+	<dd><a href="w11/table.html">Chapter 8 Exercise</a></dd>
+	<dd><a href="w11/my_nivo.html">Nivo Slider</a></dd>
+</dl>	
+	
 	
 </div><!-- weekly ends-->
 <div id="project">
@@ -104,6 +110,9 @@
 <dd><a href="../project/site/resumepage.html">HTML structure 3</a></dd>
 <dd><a href="../project/site/tsc.html">HTML structure 4</a></dd>
 <dd><a href="../project/site/contactpage.html">HTML structure 5</a></dd>
+<dt>Revised HTML Structures</dt>
+	<dd><a href="../project/site/portfoliopage.html">Portfolio Page</a></dd>
+	<dd><a href="../project/site/tsc.html"</dd>
 <dd>Coding in progress</dd>
 <dd>Final website</dd>
 </dl>
