--- a/weekly/index.html
+++ b/weekly/index.html
@@ -112,7 +112,7 @@
 <dd><a href="../project/site/contactpage.html">HTML structure 5</a></dd>
 <dt>Revised HTML Structures</dt>
 	<dd><a href="../project/site/portfoliopage.html">Portfolio Page</a></dd>
-	<dd><a href="../project/site/tsc.html"</dd>
+	<dd><a href="../project/site/tsc.html">TSC Page</a></dd>
 <dd>Coding in progress</dd>
 <dd>Final website</dd>
 </dl>
