--- a/weekly/index.html
+++ b/weekly/index.html
@@ -113,7 +113,8 @@
 <dt>Revised HTML Structures</dt>
 	<dd><a href="../project/site/portfoliopage.html">Portfolio Page</a></dd>
 	<dd><a href="../project/site/tsc.html">TSC Page</a></dd>
-<dd>Coding in progress</dd>
+<dt>Coding in progress</dt>
+	<dd><a href="../project/site/resumepage.html">First Coded Page (Resume Page) </a></dd>
 <dd>Final website</dd>
 </dl>
 	
