--- a/weekly/index.html
+++ b/weekly/index.html
@@ -115,6 +115,7 @@
 	<dd><a href="../project/site/tsc.html">TSC Page</a></dd>
 <dt>Coding in progress</dt>
 	<dd><a href="../project/site/resumepage.html">First Coded Page (Resume Page) </a></dd>
+	<dd><a href="../project/site/workspage.html">Second Coded Page (TSC is NOT ME)</a></dd>
 <dd>Final website</dd>
 </dl>
 	
