--- a/project/site/homepage.html
+++ b/project/site/homepage.html
@@ -3,39 +3,56 @@
 <head>
 <meta charset="UTF-8">
 <title>Home Page</title>
+	<!--<link rel="stylesheet" href="css/portsite.css">-->
+	<link rel="stylesheet" href="css/works_cui.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 	
-<header>
-	<img src="" alt=""><!--logo-->
-<nav>
-	<ul><!--remember to remove bullet points-->
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-	</ul>
-	</nav>
-</header>
 	
 	
 <body>
+	
+	<header>
+<nav>
+	<img class="logo" src="img/mainlogo.png" alt="main logo">
+	<div class="nav">
+	<ul>
+		<li><a href="homepage.html" class="active">ABOUT</a></li>
+		<li><a href="resumepage.html">RÉSUMÉ</a></li>
+		<li><a href="portfoliopage.html">PORTFOLIO</a></li>
+		<li><a href="contactpage.html">CONTACT</a></li>
+	</ul>
+	</div>
+</nav>
+</header>
+	
 	<div class="wrapper">
 		<div class="info">
-		<h1></h1>
-			<p></p>
+		<h1>MEET ERICK</h1>
+			<p>
+My name is Erick Argueta and I am a Design student at George Mason University. I have always believed in the phrase "Leave your mark on this world" and knew graphic design was the career to do it. I always loved the idea of visually conveying a message through a piece of work and the power behind that design.</p>
+			<br>
+
+<p>“Leave your mark on this world” has been a phrase that I have always elieved in since high school. I became enamored with the idea of leaving behind a significant impact on this world in any way possible and with my creative skillset, I knew that graphic design would help me achieve that vision. From a young age, I have always seen the creative side of life. This point of view helped me discover design and has been a prime interest of mine since then. This interest led me to enroll into an introductory course at a local Career and Technology Center where I first learned about the power behind design. I find inspiration in the simplest of forms and the ability to achieve an understanding of meaning through symbols which is why branding is so fascinating to me. Looking back from where I started, I can say that design has always been a part of my life and I am ready to leave my mark on this world. </p>
 		</div>
 		
 		<div class="photo">
-			<img src="" alt="">
+			<img src="img/me_03.jpg" alt="Profile">
 		</div>
 	</div>
 	
-	<footer>
-		<p class="small"></p>
-		<!--Social Icons below-->
-		<a><img src="" alt=""></a>
-		<a><img src="" alt=""></a>
-		<a><img src="" alt=""></a>
-	</footer>
+		
+<div class="clearboth"></div> <!--shan added -->
+	<div id="container2"><!--shan added -->
+		<footer>
+		<p class="small">&#169;Argueta Designs 2020</p>
+		<div class="social">
+		<a href="https://www.facebook.com/ldb13/" target="_blank"><img src="img/facebooklogo.png" alt="facebook logo"></a>
+		<a href="https://www.instagram.com/argueta_designs/" target="_blank"><img src="img/instagramlogo.png" alt="instagram logo"></a>
+		<a href="https://www.linkedin.com/in/erick-argueta-bb862a1a2/" target="_blank"><img src="img/linkedinlogo.png" alt="linkedin logo"></a>
+		</div>
+		</footer>
+	</div>
 </body>
 </html>
