--- a/project/site/resumepage.html
+++ b/project/site/resumepage.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Resume</title>
-	
-	<link rel="stylesheet" href="css/portsite.css">
+	<link rel="stylesheet" href="css/works_cui.css">
+	<!--<link rel="stylesheet" href="css/portsite.css">-->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
@@ -13,6 +13,7 @@
 	
 	
 <body>
+	
 <header>
 	
 <nav>
@@ -20,13 +21,16 @@
 	<div class="nav">
 	<ul>
 		<li><a href="homepage.html">ABOUT</a></li>
-		<li><a href="resumepage.html">RÉSUMÉ</a></li>
+		<li><a href="resumepage.html" class="active">RÉSUMÉ</a></li>
 		<li><a href="portfoliopage.html">PORTFOLIO</a></li>
 		<li><a href="contactpage.html">CONTACT</a></li>
 	</ul>
 	</div>
 </nav>
 </header>
+	
+	
+<div class="main">
 	<div class="wrapper">
 		<h1>RÉSUMÉ</h1>
 		<div class="column"><!--Experience Column-->
@@ -74,18 +78,22 @@
 		</div>
 		
 	</div>
-	<a href="" id="download">DOWNLOAD CV</a>
+		
+	</div>
+
 
 		
 	
-	
-	<footer>
+<div class="clearboth"></div> <!--shan added -->
+	<div id="container2"><!--shan added -->
+		<footer>
 		<p class="small">&#169;Argueta Designs 2020</p>
 		<div class="social">
 		<a href="https://www.facebook.com/ldb13/" target="_blank"><img src="img/facebooklogo.png" alt="facebook logo"></a>
 		<a href="https://www.instagram.com/argueta_designs/" target="_blank"><img src="img/instagramlogo.png" alt="instagram logo"></a>
 		<a href="https://www.linkedin.com/in/erick-argueta-bb862a1a2/" target="_blank"><img src="img/linkedinlogo.png" alt="linkedin logo"></a>
 		</div>
-	</footer>
+		</footer>
+	</div>
 </body>
 </html>
