--- a/project/site/volpe.html
+++ b/project/site/volpe.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>TSC is not ME</title>
+<title>VOLPE ATHLETICS</title>
 	<link rel="stylesheet" href="css/lightbox.css">
 	<link rel="stylesheet" href="css/mystyle.css">
 	<link rel="stylesheet" href="css/works_cui.css">
@@ -27,20 +27,17 @@
 </header>
 	
 	<div class="wrapper">
-	
-	<h1>TSC IS NOT ME</h1>
+	<h1>VOLPE ATHLETICS</h1>
 		
-		<p>TSC is not ME is a book that I wrote and designed on a rare, genetic disorder called tuberous sclerosis. The book is separated in two sections: one section is research-based while the other tells the story of my life, living with tuberous sclerosis from the perspectives of my mother and myself.</p>
+		<p>Branding and branding suite for fictitious athletic sportswear company, Volpe Athletics. Included is a logo, business card, letterhead, envelope, brochure, notebook, and poster.</p>
 
 
 		<div id="gallery">
 	
-		<a href="img/tsc1.jpg" data-lightbox="TSC" data-title="TSC is not ME Front Cover"><img src="img/thum_tsc_03.jpg" alt="thumbnail1"></a>
-		<a href="img/tsc2.jpg" data-lightbox="TSC" data-title="Full Spread of TSC is not ME"><img src="img/thum_tsc_05.jpg" alt="thumbnail2"></a>
-		<a href="img/tsc3.jpg" data-lightbox="TSC" data-title="Full Spread of TSC is not ME"><img src="img/thum_tsc_07.jpg" alt="thumbnail3"></a>
-		<a href="img/tsc4.jpg" data-lightbox="TSC" data-title="Full Spread of TSC is not ME"><img src="img/thum_tsc_12.jpg" alt="thumbnail4"></a>
-		<a href="img/tsc5.jpg" data-lightbox="TSC" data-title="Full Spread of TSC is not ME"><img src="img/thum_tsc_15.jpg" alt="thumbnail5"></a>
-		<a href="img/tsc6.jpg" data-lightbox="TSC" data-title="Full Spread of TSC is not ME"><img src="img/thum_tsc_18.jpg" alt="thumbnail6"></a>
+		<a href="img/brochure.jpg" data-lightbox="Volpe" data-title="Volpe Athletics Brochure"><img src="img/thum_brochure.jpg" alt="thumbnail1"></a>
+		<a href="img/volpeposter.jpg" data-lightbox="Volpe" data-title="Volpe Athletics Poster"><img src="img/thum_volpeposter.jpg" alt="thumbnail2"></a>
+		<a href="img/volpestationery.jpg" data-lightbox="Volpe" data-title="Volpe Athletics Stationery Set"><img src="img/thum_volpestationery.jpg" alt="thumbnail3"></a>
+		
 	</div>
 	
 	<div class="directional">
@@ -48,7 +45,6 @@
 		<a href="portfoliopage.html">BACK TO PORTFOLIO</a>
 	</div>
 	</div>
-	
 		<div class="clearboth"></div> <!--shan added -->
 	<div id="container2"><!--shan added -->
 		<footer>
@@ -60,6 +56,7 @@
 		</div>
 		</footer>
 	</div>
+	
 	<script src="js/lightbox-plus-jquery.js"></script>
 </body>
 </html>
