--- a/project/site/contactpage.html
+++ b/project/site/contactpage.html
@@ -3,34 +3,61 @@
 <head>
 <meta charset="UTF-8">
 <title>Contact</title>
+	
+		<link rel="stylesheet" href="css/works_cui.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 	
-<header>
-	<img src="" alt="">
-<nav>
-	<ul>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-	</ul>
-	</nav>
-</header>
+
 	
 	
 <body>
+	<header>
+<nav>
+	<img class="logo" src="img/mainlogo.png" alt="main logo">
+	<div class="nav">
+	<ul>
+		<li><a href="homepage.html">ABOUT</a></li>
+		<li><a href="resumepage.html">RÉSUMÉ</a></li>
+		<li><a href="portfoliopage.html">PORTFOLIO</a></li>
+		<li><a href="contactpage.html" class="active">CONTACT</a></li>
+	</ul>
+	</div>
+</nav>
+</header>
 	<div class="wrapper">
-		<h1></h1>
+		<h1>LET'S TALK!</h1>
 		<!--Contact form begins-->
-		<!--Contact form ends-->
-		<a></a><!--Contact form submission-->
+		<div class="container3">
+  <form action="action_page.php">
+
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+</div>
+		
 	</div>
 	
-	<footer>
-		<p class="small"></p>
-		<a><img src="" alt=""></a>
-		<a><img src="" alt=""></a>
-		<a><img src="" alt=""></a>
-	</footer>
+<div class="clearboth"></div> <!--shan added -->
+	<div id="container2"><!--shan added -->
+		<footer>
+		<p class="small">&#169;Argueta Designs 2020</p>
+		<div class="social">
+		<a href="https://www.facebook.com/ldb13/" target="_blank"><img src="img/facebooklogo.png" alt="facebook logo"></a>
+		<a href="https://www.instagram.com/argueta_designs/" target="_blank"><img src="img/instagramlogo.png" alt="instagram logo"></a>
+		<a href="https://www.linkedin.com/in/erick-argueta-bb862a1a2/" target="_blank"><img src="img/linkedinlogo.png" alt="linkedin logo"></a>
+		</div>
+		</footer>
+	</div>
 </body>
 </html>
