--- a/project/site/masonsomenoise.html
+++ b/project/site/masonsomenoise.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>TSC is not ME</title>
+<title>MASON SOME NOISE</title>
 	<link rel="stylesheet" href="css/lightbox.css">
 	<link rel="stylesheet" href="css/mystyle.css">
 	<link rel="stylesheet" href="css/works_cui.css">
@@ -27,20 +27,17 @@
 </header>
 	
 	<div class="wrapper">
-	
-	<h1>TSC IS NOT ME</h1>
+	<h1>MASON SOME NOISE</h1>
 		
-		<p>TSC is not ME is a book that I wrote and designed on a rare, genetic disorder called tuberous sclerosis. The book is separated in two sections: one section is research-based while the other tells the story of my life, living with tuberous sclerosis from the perspectives of my mother and myself.</p>
+		<p>Promotional poster set for Mason Some Noise, a collegiate acapella group based in Fairfax, Virginia. Includes a logo and three different poster designs.</p>
 
 
 		<div id="gallery">
 	
-		<a href="img/tsc1.jpg" data-lightbox="TSC" data-title="TSC is not ME Front Cover"><img src="img/thum_tsc_03.jpg" alt="thumbnail1"></a>
-		<a href="img/tsc2.jpg" data-lightbox="TSC" data-title="Full Spread of TSC is not ME"><img src="img/thum_tsc_05.jpg" alt="thumbnail2"></a>
-		<a href="img/tsc3.jpg" data-lightbox="TSC" data-title="Full Spread of TSC is not ME"><img src="img/thum_tsc_07.jpg" alt="thumbnail3"></a>
-		<a href="img/tsc4.jpg" data-lightbox="TSC" data-title="Full Spread of TSC is not ME"><img src="img/thum_tsc_12.jpg" alt="thumbnail4"></a>
-		<a href="img/tsc5.jpg" data-lightbox="TSC" data-title="Full Spread of TSC is not ME"><img src="img/thum_tsc_15.jpg" alt="thumbnail5"></a>
-		<a href="img/tsc6.jpg" data-lightbox="TSC" data-title="Full Spread of TSC is not ME"><img src="img/thum_tsc_18.jpg" alt="thumbnail6"></a>
+		<a href="img/msnposter1.jpg" data-lightbox="Mason" data-title="First Poster"><img src="img/thum_msnposter1.jpg" alt="thumbnail1"></a>
+		<a href="img/msnposter2.jpg" data-lightbox="Mason" data-title="Second Poster"><img src="img/thum_msnposter2.jpg" alt="thumbnail2"></a>
+		<a href="img/msnposter3.jpg" data-lightbox="Mason" data-title="Third Poster"><img src="img/thum_msnposter3.jpg" alt="thumbnail3"></a>
+		
 	</div>
 	
 	<div class="directional">
@@ -49,7 +46,7 @@
 	</div>
 	</div>
 	
-		<div class="clearboth"></div> <!--shan added -->
+	<div class="clearboth"></div> <!--shan added -->
 	<div id="container2"><!--shan added -->
 		<footer>
 		<p class="small">&#169;Argueta Designs 2020</p>
@@ -60,6 +57,7 @@
 		</div>
 		</footer>
 	</div>
+	
 	<script src="js/lightbox-plus-jquery.js"></script>
 </body>
 </html>
