--- a/project/site/portfoliopage.html
+++ b/project/site/portfoliopage.html
@@ -2,37 +2,92 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Portfolio</title>
+<title>TSC is not ME</title>
+	<link rel="stylesheet" href="css/lightbox.css">
+<!--	<link rel="stylesheet" href="css/mystyle.css">-->
+	<link rel="stylesheet" href="css/works_cui.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 	
-<header>
-	<img src="" alt="">
-<nav>
-	<ul>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-	</ul>
-	</nav>
-</header>
+
 	
 	
 <body>
-	<div class="wrapper">
-		<h1></h1>
-		<a><img src="" alt=""></a><!--Portfolio Images with hover effect-->
-		<a><img src="" alt=""></a>
-		<a><img src="" alt=""></a>
-		<a><img src="" alt=""></a>
-		<a><img src="" alt=""></a>
+
+<header>
+<nav>
+	<img class="logo" src="img/mainlogo.png" alt="main logo">
+	<div class="nav">
+	<ul>
+		<li><a href="homepage.html">ABOUT</a></li>
+		<li><a href="resumepage.html">RÉSUMÉ</a></li>
+		<li><a href="portfoliopage.html" class="active">PORTFOLIO</a></li>
+		<li><a href="contactpage.html">CONTACT</a></li>
+	</ul>
+	</div>
+</nav>
+</header>
+
+<article>	
+	
+	<h1>PORTFOLIO</h1>
+		
+
+
+		<div class="gallery">
+			
+			<div class="container">
+					<a href="profootball.html"><img src="img/ProFBmockup2.jpg" alt="thumbnail1" class="image">
+			  <div class="overlay">
+				<div class="text">PROFOOTBALL MAGAZINE</div>
+			  </div></a>
+			</div>			
+			
+			<div class="container">
+			<a href="masonsomenoise.html"><img src="img/msnposter1.jpg" alt="thumbnail2" class="image">
+			  <div class="overlay">
+				<div class="text">MASON SOME NOISE</div>
+			  </div></a>
+			</div>
+			
+			<div class="container">
+			<a href="volpe.html"><img src="img/volpestationery.jpg" alt="thumbnail3" class="image">
+			  <div class="overlay">
+				<div class="text">VOLPE ATHLETICS</div>
+			  </div></a>
+			</div>
+		</div>
+	
+		<div class="gallery">
+			
+			<div class="container">
+			<a href="atiloiqos.html"><img src="img/GSGMockup5.jpg" alt="thumbnail4" class="image">
+			  <div class="overlay">
+				<div class="text">ATILOIQOS INCORPORATED</div>
+			  </div></a>
+			</div>
+			<!-- didn't change them-->
+			<div class="container">
+			<a href="workspage.html"><img src="img/tsc1.jpg" alt="thumbnail5" class="image">
+				<div class="overlay">
+					<div class="text">TSC IS NOT ME</div>
+				</div></a>
+			</div>
+		</div>
+</article>
+	
+<div class="clearboth"></div> <!--shan added -->
+	<div id="container2"><!--shan added -->
+		<footer>
+		<p class="small">&#169;Argueta Designs 2020</p>
+		<div class="social">
+		<a href="https://www.facebook.com/ldb13/" target="_blank"><img src="img/facebooklogo.png" alt="facebook logo"></a>
+		<a href="https://www.instagram.com/argueta_designs/" target="_blank"><img src="img/instagramlogo.png" alt="instagram logo"></a>
+		<a href="https://www.linkedin.com/in/erick-argueta-bb862a1a2/" target="_blank"><img src="img/linkedinlogo.png" alt="linkedin logo"></a>
+		</div>
+		</footer>
 	</div>
 	
-	<footer>
-		<p class="small"></p>
-		<a><img src="" alt=""></a>
-		<a><img src="" alt=""></a>
-		<a><img src="" alt=""></a>
-	</footer>
+	<script src="js/lightbox-plus-jquery.js"></script>
 </body>
 </html>
