--- a/weekly/index.html
+++ b/weekly/index.html
@@ -116,7 +116,7 @@
 <dt>Coding in progress</dt>
 	<dd><a href="../project/site/resumepage.html">First Coded Page (Resume Page) </a></dd>
 	<dd><a href="../project/site/workspage.html">Second Coded Page (TSC is NOT ME)</a></dd>
-<dd>Final website</dd>
+<dd><a href="../project/site/homepage.html">Final website</a></dd>
 </dl>
 	
 </div><!-- project ends-->
